Loading-wheel not being centered on mobile fix

--- a/css/main.css
+++ b/css/main.css
@@ -469,7 +469,7 @@ template {
 }
 
 .loading-screen__loading-wheel {
-  position: relative;
+  position: absolute;
   width: 38px;
   height: 38px;
   background-image: url("../img/loading-icon.svg");
@@ -480,11 +480,9 @@ template {
 
 .loading-screen__loading-wheel__part {
   box-sizing: border-box;
-  display: block;
   position: absolute;
-  width: 60px;
-  height: 60px;
-  margin: 5px;
+  width: 54px;
+  height: 54px;
   border: 3.6px solid;
   border-radius: 50%;
   animation: loading-wheel-spin 1.4s cubic-bezier(0.5, 0, 0.5, 1) infinite;
